# mobmrp

./: CITATION.cff  LICENSE  README.md  TUTORIAL.md  pyproject.toml
examples/: chile_replication.py  synthetic_example.py
src/mobmrp/: __init__.py  config.py
src/mobmrp/data/: poststrat_frame.py  prep.py  spatial.py
src/mobmrp/model/: fit.py  predict.py
src/mobmrp/poststrat/: aggregate.py  compare.py
src/mobmrp/validate/: crossval.py  diagnostics.py  sensitivity.py
